--- a/Coding Dojo/clicker.css
+++ b/Coding Dojo/clicker.css
@@ -12,14 +12,28 @@ body{
     background-color: rgba(245, 245, 245, 0.6);
 }
 
+.enter{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
 .tamago{
     display: flex;
     align-items: center;
+}
+.tamago div p{
+    font-size: 50px;
 }
 .tama{
     margin: 2%;
 }
 .tama:active{
     height: 295px;
-    width: auto;
+    width: auto
+}
+
+span{
+    margin-left: 5px;
+    margin-right: 5px;
 }
