--- a/Coding Dojo/clicker.css
+++ b/Coding Dojo/clicker.css
@@ -27,6 +27,8 @@ body{
 }
 .tama{
     margin: 2%;
+    height: 300px;
+    width: auto
 }
 .tama:active{
     height: 295px;
@@ -36,4 +38,14 @@ body{
 span{
     margin-left: 5px;
     margin-right: 5px;
+}
+
+label {
+    font-size: 1rem;
+    padding-right: 10px;
+}
+
+select {
+    font-size: .9rem;
+    padding: 2px 5px;
 }
