--- a/Coding Dojo/clicker.css
+++ b/Coding Dojo/clicker.css
@@ -59,6 +59,14 @@ select {
     padding: 2px 5px;
 }
 
+#indice{
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 20px;
+    margin-left: 40%;
+    margin-right: 40%;
+    border-style: solid;
+}
 #prestige{
     display: flex;
     justify-content: space-evenly;
